# nirs4all-datasets

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  LICENSING_FR.md  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  cbindgen.toml  migration_ABI_C.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: abi-check.yml  ci.yml  docs.yml  publish.yml  release-crates.yml  release-matlab.yml  release-npm.yml  release-python.yml  release-r.yml  release-source.yml  release.yml  version-guard.yml  version-sync.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
bindings/: SPEC.md
bindings/matlab/: README.md  build.m  build_and_test.sh  n4ds.c  smoke.m
bindings/python/: Cargo.toml  README.md
bindings/python/src/: lib.rs
bindings/r/: build_and_test.sh
bindings/wasm/: Cargo.toml  LICENSE  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: node_smoke.cjs
catalog/: datasets.yaml  health.json  index.json  reconciliation.json  retrieval_audit.json  validation.yaml
catalog/datasets/: alpine_c_424_ks.yaml  alpine_c_424_robustnessalps.yaml  alpine_c_424_robustnessfennoscandia.yaml  alpine_n_552_ks.yaml  alpine_n_552_robustnessalps.yaml  alpine_n_552_robustnessfennoscandia.yaml  alpine_p_291_ks.yaml  alpine_p_291_robustnessalps.yaml  alpine_p_291_robustnessfennoscandia.yaml  amylose_rice_amylose_313_ybasedsplit.yaml  arabidopsis_cefe_genotype10_250.yaml  arabidopsis_cefe_group9_1856.yaml  arabidopsis_cefe_group_2185.yaml  arabidopsis_cefe_inout_1264.yaml  beef_impurity_60_aljowder.yaml  beefmarbling_beef_marbling_randomsplit.yaml  beer_originalextract_60_ks.yaml  beer_originalextract_60_ybasesplit.yaml  berry_brix_groupsampleid_stratdatevar_balrows.yaml  berry_ph_groupsampleid_stratdatevar_balrows.yaml  berry_ta_groupsampleid_stratdatevar_balrows.yaml  biscuit_fat_40_randomsplit.yaml  biscuit_flour_40_randomsplit.yaml  biscuit_sucrose_40_randomsplit.yaml  biscuit_water_40_randomsplit.yaml  cartilage_spectroscopy_scientificdata_nir.yaml  cassava_ct2c_1057_ciat_acc.yaml  cassava_dm_3357_sanchezrandombyyear10p.yaml  cassava_dm_5115_davrieuxrobustness2013.yaml  cassava_dm_5578_davrieuxrobustness2014.yaml  cassava_dm_5578_sanchezrobustness2012.yaml  cassava_tbc_3093_sanchezrandombyyear10p.yaml  cassava_tbc_3825_shendavrieuxrobustness2013.yaml  cassava_tbc_4288_davrieuxrobustness2014.yaml  cassava_tbc_4288_sanchezrobustness2012.yaml  cassava_tcc_3368_sanchezrandombyyear10p.yaml  cassava_tcc_4468_davrieuxrobustness2013.yaml  cassava_tcc_4930_davrieuxrobustness2014.yaml  cassava_tcc_4930_sanchezrobustness2012.yaml  cgl_nir_grain_eigenvector.yaml  (+603 more)
catalog/schema/: dataset_v1.json
catalog/scripts/: validate.py
crates/nirs4all-datasets-capi/: Cargo.toml  build.rs
crates/nirs4all-datasets-capi/abi/: expected_symbols_windows.txt  exported_symbols_macos.txt  version_script.map
crates/nirs4all-datasets-capi/include/: nirs4all_datasets.h
crates/nirs4all-datasets-capi/src/: lib.rs
crates/nirs4all-datasets-capi/tests/: abi_surface.rs
crates/nirs4all-datasets-cli/: Cargo.toml
crates/nirs4all-datasets-cli/src/: main.rs
crates/nirs4all-datasets-core/: Cargo.toml
crates/nirs4all-datasets-core/src/: cache.rs  error.rs  fetch.rs  hash.rs  http.rs  lib.rs  model.rs  origins.rs  prepare.rs  resolve.rs  retrieve.rs  verify.rs
datasets/alpine_c_424_ks/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_c_424_robustnessalps/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_c_424_robustnessfennoscandia/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_n_552_ks/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_n_552_robustnessalps/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_n_552_robustnessfennoscandia/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_p_291_ks/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_p_291_robustnessalps/: card.json  card.md  croissant.json  manifest.json
datasets/alpine_p_291_robustnessfennoscandia/: card.json  card.md  croissant.json  manifest.json
datasets/amylose_rice_amylose_313_ybasedsplit/: card.json  card.md  croissant.json  manifest.json
datasets/arabidopsis_cefe_genotype10_250/: card.json  card.md  croissant.json  manifest.json
datasets/arabidopsis_cefe_group9_1856/: card.json  card.md  croissant.json  manifest.json
datasets/arabidopsis_cefe_group_2185/: card.json  card.md  croissant.json  manifest.json
datasets/arabidopsis_cefe_inout_1264/: card.json  card.md  croissant.json  manifest.json
datasets/beef_impurity_60_aljowder/: card.json  card.md  croissant.json  manifest.json
datasets/beefmarbling_beef_marbling_randomsplit/: card.json  card.md  croissant.json  manifest.json
datasets/beer_originalextract_60_ks/: card.json  card.md  croissant.json  manifest.json
datasets/beer_originalextract_60_ybasesplit/: card.json  card.md  croissant.json  manifest.json
datasets/biscuit_fat_40_randomsplit/: card.json  (+3 more)
docs/: ARCHITECTURE.md  DATASET_STATUS.md  DATAVERSE_PENDING.md  DESIGN.md  PLAN-reference-bank.md  PRIVATE_DATASETS.md  PUBLISHING.md  RELEASING.md  RETRIEVAL_AUDIT.md  STATUS.md  catalog.md  conf.py  gen.py  getting_started.md  index.md  installation.md  requirements.txt
scripts/: bump_version.sh  ensure_rust_deps.sh
tests/: conftest.py  test_access.py  test_acquire.py  test_anon_enforcement.py  test_anonymize.py  test_bootstrap.py  test_canonical.py  test_catalog.py  test_cli.py  test_croissant.py  test_dataset.py  test_datasheet.py  test_dataverse.py  test_discover.py  test_health.py  test_index.py  test_ingest.py  test_manifest.py  test_metrics.py  test_metrics_shift.py  test_organize.py  test_profile.py  test_publish.py  test_r_configure_wasm.py  test_registry.py  test_reproduce.py  test_residual_retrieval_routes.py  test_retrieval.py  test_retrieval_audit.py  test_robust_ingest.py  test_schema.py  test_site.py  test_status.py
(+2693 files in other folders)
