[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "nirs4all-datasets"
version = "0.2.3"
description = "A citable, reproducible bank of raw NIRS reference datasets — multi-source/multi-target, tier-governed, with on-demand checksum-verified access from each dataset's origin."
authors = [
    { name = "Gregory Beurier", email = "beurier@cirad.fr" },
]
readme = "README.md"
license = "CeCILL-2.1 OR AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*.txt"]
keywords = [
    "nirs",
    "near-infrared",
    "spectroscopy",
    "dataset",
    "registry",
    "dataverse",
    "FAIR",
    "benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    # Data
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    # Schema / config
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.17.0",
    "python-dotenv>=1.0.0",
    # Visualization (cards)
    "matplotlib>=3.7.0",
    # Publish + health probe (Dataverse Native API is plain REST via requests). Dataset *download* is
    # the native acquisition core (embedded `nirs4all_datasets._n4ds`), not pooch/requests.
    "requests>=2.31.0",
    # CLI
    "typer>=0.12.0",
]

[project.optional-dependencies]
# The nirs4all bridge: NirsDataset.to_nirs4all() + nirs4all-powered card metrics (PCA, outlier filter).
# The catalog, get()/NirsDataset readers (numpy/pandas), and the site all work WITHOUT this extra — the
# nirs4all imports are lazy and degrade gracefully (PCA -> None + a card warning; to_nirs4all -> a clear
# error if nirs4all is absent). Install it to qualify cards and to hand datasets to nirs4all.
nirs4all = [
    "nirs4all>=0.9",
]
# Read vendor instrument files + assemble a dataset from an OPEN origin's RAW bytes, delegated to the
# ecosystem readers (never re-implemented here): nirs4all-io owns assembly, nirs4all-formats the
# vendor decoders. Needed only by the (opt-in) "reproduce from origin" acquisition path.
io = [
    "nirs4all-io>=0.1",
    "nirs4all-formats>=0.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests",
    "types-PyYAML",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
n4a-datasets = "nirs4all_datasets.cli:app"

[project.urls]
Homepage = "https://github.com/GBeurier/nirs4all-datasets"
Repository = "https://github.com/GBeurier/nirs4all-datasets"
Issues = "https://github.com/GBeurier/nirs4all-datasets/issues"

# The `nirs4all-datasets` wheel bundles BOTH the pure-Python analysis layer (src/) and
# the native acquisition extension `nirs4all_datasets._n4ds` (Rust core via pyo3, in
# bindings/python). There is no separate Python distribution — `pip install
# nirs4all-datasets` gets analysis + native acquisition together.
[tool.maturin]
python-source = "src"
module-name = "nirs4all_datasets._n4ds"
manifest-path = "bindings/python/Cargo.toml"
features = ["pyo3/extension-module"]
include = ["catalog/index.json"]

# Editable local source for development (uv); CI / PyPI use the published packages.
[tool.uv.sources]
nirs4all = { path = "../nirs4all", editable = true }
nirs4all-io = { path = "../nirs4all-io", editable = true }
nirs4all-formats = { path = "../nirs4all-formats/bindings/python", editable = true }

[tool.ruff]
line-length = 220
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E402", "F841", "F401", "E501", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["B", "SIM"]
"src/nirs4all_datasets/cli.py" = ["B008"]  # typer.Option(...) defaults are the documented Typer pattern

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["build", "\\.venv", "docs/_build"]

# External deps: do not type-check their internals (they are not ours to fix here).
[[tool.mypy.overrides]]
module = ["nirs4all.*", "nirs4all_io.*", "pyarrow.*", "pooch.*", "requests.*", "dotenv.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "network: tests that hit a live Dataverse instance (deselect with -m 'not network')",
]
