# SPDX-License-Identifier: MIT
# The pyo3 acquisition extension. It is embedded INTO the `nirs4all-datasets` Python
# package (module `nirs4all_datasets._n4ds`) by the maturin build in the repo-root
# pyproject.toml — there is no separate Python distribution. Excluded from the cargo
# workspace (built by maturin).
[package]
name = "nirs4all-datasets-py"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Gregory Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/nirs4all-datasets"
description = "pyo3 acquisition extension embedded in the nirs4all-datasets Python package."

[lib]
name = "_n4ds"
crate-type = ["cdylib"]

[dependencies]
nirs4all-datasets-core = { path = "../../crates/nirs4all-datasets-core" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
serde_json = { version = "1.0", features = ["preserve_order", "float_roundtrip"] }
