# SPDX-License-Identifier: MIT
# Excluded from the cargo workspace (built by wasm-pack). Depends on the core with
# default features OFF — only the pure resolve/hash surface compiles to wasm32.
[package]
name = "nirs4all-datasets-wasm"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Gregory Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/nirs4all-datasets"
description = "WASM (wasm-bindgen) binding over nirs4all-datasets-core: resolve the download contract + SHA-256 in the browser/Node. Scoped to metadata + small public datasets."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nirs4all-datasets-core = { path = "../../crates/nirs4all-datasets-core", default-features = false }
wasm-bindgen = "0.2"
