# SPDX-License-Identifier: CECILL-2.1 OR AGPL-3.0-or-later
[package]
name = "nirs4all-datasets-capi"
description = "Stable C ABI (n4ds_ prefix) over nirs4all-datasets-core: resolve / fetch / verify_cached, JSON-on-the-wire, status+error model, opaque context handle."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
nirs4all-datasets-core = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
