# SPDX-License-Identifier: CECILL-2.1 OR AGPL-3.0-or-later
[package]
name = "nirs4all-datasets-cli"
description = "n4ds: a thin CLI over nirs4all-datasets-core — resolve / fetch / verify a dataset from catalog/index.json (the cross-language parity oracle)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "n4ds"
path = "src/main.rs"

[dependencies]
nirs4all-datasets-core = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
